# policy-model-router

./: .env.example  .harness.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.pt-BR.md  SECURITY.md  pyproject.toml
.claude/rules/: architecture.md  observability.md
.github/: CODEOWNERS
.github/workflows/: publish.yml  quality.yml
config/: routing_policy.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LLM_OBSERVABILITY.md  PRIVACY.md  architecture-blueprint.md
docs/adr/: 0004-litellm-provider-boundary.md  0005-deterministic-policy-routing.md  0006-availability-provider-port.md  0007-http-boundary-hardening.md  0008-redis-shared-rate-limiter.md  0009-policy-identity-and-decision-provenance.md  0010-token-based-cost-estimation.md  0011-http-boundary-pre-parse-limits.md
scripts/: quality_gate.py  validate_loop_schema_vendor.py
scripts/_vendor_loop_schemas/: __init__.py  _stdlib_jsonschema.py  manifest.json  models.py  schema_resources.py  validate_contract.py
scripts/_vendor_loop_schemas/schemas/: builder-result.schema.json  contract.schema.json  evidence.schema.json  verdict.schema.json
src/policy_model_router/: __init__.py
src/policy_model_router/adapters/: availability.py  clock.py  id_generator.py  rate_limiter.py  redis_rate_limiter.py  routing_policy_loader.py
src/policy_model_router/application/: ports.py  route_model.py
src/policy_model_router/domain/: catalog.py  constraints.py  enums.py  routing.py
src/policy_model_router/entrypoints/: contracts.py  http.py  logging.py  settings.py
tests/integration/: conftest.py  test_redis_rate_limiter_integration.py
tests/unit/: conftest.py  test_availability.py  test_constraints.py  test_http.py  test_logging.py  test_package.py  test_rate_limiter.py  test_rate_limiter_factory.py  test_redis_rate_limiter.py  test_route_model.py  test_routing_policy_loader.py  test_settings.py  test_tracing.py
