[project]
name = "policy-model-router"
version = "0.3.0"
description = "Deterministic, policy-based model-group router for governed LLM workloads"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115",
    "prometheus-client>=0.25.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.8",
    "pyyaml>=6.0",
    "structlog>=25.1",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
# Opt-in Redis-backed, cross-replica rate limiting; see ADR-0008. Install with
# `uv sync --extra rate-limit`. Without it (or without REDIS_URL set), the service falls back to
# the default in-memory, per-process limiter.
rate-limit = [
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.8",
    "httpx>=0.28",
    "mypy>=1.16",
    "pip-audit>=2.9",
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "ruff>=0.12",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_model_router"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
    "ANN",
    "D",
    "S",
]
ignore = [
    "ANN401", # Any is handled as an architecture concern and reviewed explicitly.
    "D203",   # Incompatible with D211.
    "D213",   # Google style uses D212.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "ANN"]
"scripts/**/*.py" = ["D"]
# scripts/_vendor_loop_schemas/models.py quotes its `from_dict` classmethods'
# self-referencing return annotations on purpose (see that file's own header
# comment): the quotes are load-bearing on Python 3.12/3.13 and only look
# removable to ruff's UP037 when this project's own target-version is 3.14.
# Suppressed here (not with an inline noqa) because an inline noqa becomes an
# unused-directive RUF100 error on 3.12/3.13, where UP037 never fires.
"scripts/_vendor_loop_schemas/models.py" = ["UP037"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# redis is the optional "rate-limit" extra; not installed by default, so no
# stubs are available unless a project opts in with `uv sync --extra rate-limit`.
module = ["redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=src/policy_model_router --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: tests that require real infrastructure",
    "contract: tests that verify an interface contract",
    "e2e: critical end-to-end tests",
]

[tool.coverage.run]
branch = true
source = ["src/policy_model_router"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[tool.engineering-harness.quality]
source-roots = ["src"]
test-roots = ["tests"]

[tool.engineering-harness.architecture]
source-roots = ["src"]
clean-architecture = true
